generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  name      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  organizationMembers OrganizationMember[]
}

model Organization {
  id          String   @id @default(uuid())
  name        String
  slug        String   @unique // URL-friendly identifier
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  
  members           OrganizationMember[]
  entityDefinitions EntityDefinition[]
  dynamicEntities   DynamicEntity[]
  
  @@index([slug])
}

model OrganizationMember {
  id             String   @id @default(uuid())
  userId         String
  organizationId String
  role           String   // 'owner', 'admin', 'member'
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  
  @@unique([userId, organizationId])
  @@index([userId])
  @@index([organizationId])
}

model EntityDefinition {
  id             String   @id @default(uuid())
  name           String   // e.g., "Product", "Customer"
  tableName      String   // e.g., "product", "customer"
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  fields         Json     // Field definitions
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  
  @@unique([name, organizationId])
  @@index([organizationId])
}

model DynamicEntity {
  id             String   @id @default(uuid())
  entityType     String   // References EntityDefinition.name
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  data           Json     // Actual entity data
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  
  @@index([entityType, organizationId])
  @@index([organizationId])
}